--- a/index.html
+++ b/index.html
@@ -24,5 +24,9 @@
                 </div>
             </div>
         </header>
+
+        <div class="banner">
+            <h1>My Twitter</h1>
+        </div>
     </body>
 </html>
