--- a/index.html
+++ b/index.html
@@ -28,5 +28,34 @@
         <div class="banner">
             <h1>My Twitter</h1>
         </div>
+
+        <div class="top-bar">
+            <div class="content">
+
+                <ul>
+                    <li class="active">
+                        <span>Tweets</span>
+                        <strong>1234</strong>
+                    </li>
+                    <li>
+                        <span>Followings</span>
+                        <strong>123</strong>
+                    </li>
+                    <li>
+                        <span>Followers</span>
+                        <strong>85</strong>
+                    </li>
+                    <li>
+                        <span>Favorites</span>
+                        <strong>52</strong>
+                    </li>
+                </ul>
+
+                <div class="actions">
+                    <button>Follow</button>
+                    <img src="/images/more.svg" alt="More">
+                </div>
+            </div>    
+        </div>
     </body>
 </html>
