--- a/index.html
+++ b/index.html
@@ -57,5 +57,30 @@
                 </div>
             </div>    
         </div>
+
+        <div class="wrapper-content">
+            <aside class="profile">
+                <img class="avatar" src="/images/avatar.png" alt="Diogo Sena">
+                <h1>Diogo Sena</h1>
+                <span>@Exibit</span>
+                <p>Web, Design & Rock 'n roll Partner/UI Designer @spade_be Musician in @dashboxmusic</p>
+
+                <ul>
+                    <li><img src="/images/place.svg" alt="Place"> Namur, Belgium</li>
+                    <li><img src="/images/url.svg" alt=""> exibit.be</li>
+                    <li><img src="/images/joined.svg" alt="Joined"> Joined June 2017</li>
+                    <li><img src="/images/born.svg" alt="Born"> Born the 20th of June 1978</li>
+
+                </ul>
+            </aside>
+
+            <section class="timeline">
+                timeline
+            </section>
+
+            <aside class="wigets">
+                widgets
+            </aside>
+        </div>
     </body>
 </html>
