--- a/index.html
+++ b/index.html
@@ -58,27 +58,53 @@
             </div>    
         </div>
 
-        <div class="wrapper-content">
+        <div class="wrapper-content content">
             <aside class="profile">
                 <img class="avatar" src="/images/avatar.png" alt="Diogo Sena">
                 <h1>Diogo Sena</h1>
                 <span>@Exibit</span>
                 <p>Web, Design & Rock 'n roll Partner/UI Designer @spade_be Musician in @dashboxmusic</p>
 
-                <ul>
+                <ul class="list">
                     <li><img src="/images/place.svg" alt="Place"> Namur, Belgium</li>
-                    <li><img src="/images/url.svg" alt=""> exibit.be</li>
+                    <li><img src="/images/url.svg" alt="URL"> exibit.be</li>
                     <li><img src="/images/joined.svg" alt="Joined"> Joined June 2017</li>
                     <li><img src="/images/born.svg" alt="Born"> Born the 20th of June 1978</li>
-
                 </ul>
+
+                <div class="widget followers">
+                    <strong><img src="/images/followers.svg" alt="Followers"> 73 followers that you know</strong>
+                    <ul>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                    </ul>
+                </div>
+                <div class="widget images">
+                    <strong><img src="/images/images.svg" alt="images"> 266 Photos and videos</strong>
+                    <ul>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                    </ul>
+                </div>
             </aside>
 
             <section class="timeline">
                 timeline
             </section>
 
-            <aside class="wigets">
+            <aside class="widgets">
                 widgets
             </aside>
         </div>
