--- a/index.html
+++ b/index.html
@@ -1,112 +1,151 @@
 <!DOCTYPE html>
-    <html lang="en">
-    <head>
-        <meta charset="UTF-8">        
-        <title>Flexbox</title>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8">        
+    <title>Flexbox</title>
 
-        <link rel="stylesheet" href="styles.css">
-    </head>
-    <body>
-        <header id="main-header">
-            <div class="content">
-                <nav>
-                    <ul>
-                        <li><img src="/images/home.svg" alt="Home"> Home</li>
-                        <li><img src="/images/notification.svg" alt="Notifications">Notifications</li>
-                        <li><img src="/images/message.svg" alt="Message">Messages</li>
-                    </ul>
-                </nav>
-                <img src="/images/logo.svg" alt="Logo Twitter">
-                <div class="side">
-                    <input type="text" placeholder="Search on Twitter">
-                    <img src="/images/avatar.png" alt="">
-                    <button>Tweet</button>
-                </div>
+    <link rel="stylesheet" href="styles.css">
+  </head>
+  <body>
+    <header id="main-header">
+      <div class="content">
+          <nav>
+            <ul>
+              <li><img src="/images/home.svg" alt="Home"> Home</li>
+              <li><img src="/images/notification.svg" alt="Notifications">Notifications</li>
+              <li><img src="/images/message.svg" alt="Message">Messages</li>
+            </ul>
+          </nav>
+          <img src="/images/logo.svg" alt="Logo Twitter">
+          <div class="side">
+            <input type="text" placeholder="Search on Twitter">
+            <img src="/images/avatar.png" alt="">
+            <button>Tweet</button>
+          </div>
+      </div>
+    </header>
+
+    <div class="banner">
+      <h1>My Twitter</h1>
+    </div>
+
+    <div class="top-bar">
+        <div class="content">
+
+            <ul>
+                <li class="active">
+                    <span>Tweets</span>
+                    <strong>1234</strong>
+                </li>
+                <li>
+                    <span>Followings</span>
+                    <strong>123</strong>
+                </li>
+                <li>
+                    <span>Followers</span>
+                    <strong>85</strong>
+                </li>
+                <li>
+                    <span>Favorites</span>
+                    <strong>52</strong>
+                </li>
+            </ul>
+
+            <div class="actions">
+                <button>Follow</button>
+                <img src="/images/more.svg" alt="More">
             </div>
-        </header>
+        </div>    
+    </div>
 
-        <div class="banner">
-            <h1>My Twitter</h1>
+    <div class="wrapper-content content">
+      <aside class="profile">
+        <img class="avatar" src="/images/avatar.png" alt="Diogo Sena">
+        <h1>Diogo Sena</h1>
+        <span>@Exibit</span>
+        <p>Web, Design & Rock 'n roll Partner/UI Designer @spade_be Musician in @dashboxmusic</p>
+
+        <ul class="list">
+          <li><img src="/images/place.svg" alt="Place"> Namur, Belgium</li>
+          <li><img src="/images/url.svg" alt="URL"> exibit.be</li>
+          <li><img src="/images/joined.svg" alt="Joined"> Joined June 2017</li>
+          <li><img src="/images/born.svg" alt="Born"> Born the 20th of June 1978</li>
+        </ul>
+
+        <div class="widget followers">
+          <strong><img src="/images/followers.svg" alt="Followers"> 73 followers that you know</strong>
+          <ul>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+          </ul>
         </div>
+        <div class="widget images">
+          <strong><img src="/images/images.svg" alt="images"> 266 Photos and videos</strong>
+          <ul>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+          </ul>
+        </div>
+      </aside>
 
-        <div class="top-bar">
-            <div class="content">
+      <section class="timeline">
+        timeline
+      </section>
 
-                <ul>
-                    <li class="active">
-                        <span>Tweets</span>
-                        <strong>1234</strong>
-                    </li>
-                    <li>
-                        <span>Followings</span>
-                        <strong>123</strong>
-                    </li>
-                    <li>
-                        <span>Followers</span>
-                        <strong>85</strong>
-                    </li>
-                    <li>
-                        <span>Favorites</span>
-                        <strong>52</strong>
-                    </li>
-                </ul>
+      <aside class="widgets">
+          <div class="widget follow">
+            <div class="title">
+              <strong>Who to Follow</strong>
+              <a href="">Refresh</a>
+              <a href="">Viw all</a>
+            </div>
 
-                <div class="actions">
+            <ul>
+              <li>
+                <div class="profile">
+                  <img src="/images/avatar.png" alt="Avatar">
+                  <div class="info">
+                    <strong>Spade <span>@spade_bec</span></strong>
                     <button>Follow</button>
-                    <img src="/images/more.svg" alt="More">
+                  </div>
                 </div>
-            </div>    
-        </div>
-
-        <div class="wrapper-content content">
-            <aside class="profile">
-                <img class="avatar" src="/images/avatar.png" alt="Diogo Sena">
-                <h1>Diogo Sena</h1>
-                <span>@Exibit</span>
-                <p>Web, Design & Rock 'n roll Partner/UI Designer @spade_be Musician in @dashboxmusic</p>
-
-                <ul class="list">
-                    <li><img src="/images/place.svg" alt="Place"> Namur, Belgium</li>
-                    <li><img src="/images/url.svg" alt="URL"> exibit.be</li>
-                    <li><img src="/images/joined.svg" alt="Joined"> Joined June 2017</li>
-                    <li><img src="/images/born.svg" alt="Born"> Born the 20th of June 1978</li>
-                </ul>
-
-                <div class="widget followers">
-                    <strong><img src="/images/followers.svg" alt="Followers"> 73 followers that you know</strong>
-                    <ul>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                    </ul>
+                <a href="">x</a>
+              </li>
+              <li>
+                <div class="profile">
+                  <img src="/images/avatar.png" alt="Avatar">
+                  <div class="info">
+                    <strong>Spade <span>@spade_bec</span></strong>
+                    <button>Follow</button>
+                  </div>
                 </div>
-                <div class="widget images">
-                    <strong><img src="/images/images.svg" alt="images"> 266 Photos and videos</strong>
-                    <ul>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                    </ul>
+                <a href="">x</a>
+              </li>
+              <li>
+                <div class="profile">
+                  <img src="/images/avatar.png" alt="Avatar">
+                  <div class="info">
+                    <strong>Spade <span>@spade_bec</span></strong>
+                    <button>Follow</button>
+                  </div>
                 </div>
-            </aside>
-
-            <section class="timeline">
-                timeline
-            </section>
-
-            <aside class="widgets">
-                widgets
-            </aside>
-        </div>
-    </body>
+                <a href="">x</a>
+              </li>
+            </ul>
+          </div>
+      </aside>
+    </div>
+  </body>
 </html>
