--- a/index.html
+++ b/index.html
@@ -101,7 +101,110 @@
       </aside>
 
       <section class="timeline">
-        timeline
+        <nav>
+          <a href="" class="active">Tweets</a>
+          <a href="">Tweets and replies</a>
+          <a href="">Medias</a>
+        </nav>
+
+        <ul class="tweets">
+          <li>
+            <img src="/images/avatar.png" alt="Avatar">
+            <div class="info">
+              <strong>Benoit Vrins <span>@Exibit</span></strong>
+              <p>Conteúdo do tweetConteúdoConteúdo do tweetConteúdo do tweetConteúdo do tweetConteúdo do tweet do Conteúdo do tweetConteúdo do tweetvstweetConteúdo do tweetConteúdo do tweetConteúdo do tweetConteúdo do tweet</p>
+              <div class="actions">
+                <a href=""><img src="/images/comments.svg" alt="Comments">3</a>
+                <a href=""><img src="/images/retweet.svg" alt="Retweet">3</a>
+                <a href=""><img src="/images/like.svg" alt="Like">3</a>
+              </div>
+            </div>
+          </li>
+          <li>
+            <img src="/images/avatar.png" alt="Avatar">
+            <div class="info">
+              <strong>Benoit Vrins <span>@Exibit</span></strong>
+              <p>Conteúdo do tweetConteúdoConteúdo do tweetConteúdo do tweetConteúdo do tweetConteúdo do tweet do Conteúdo do tweetConteúdo do tweetvstweetConteúdo do tweetConteúdo do tweetConteúdo do tweetConteúdo do tweet</p>
+              <div class="actions">
+                <a href=""><img src="/images/comments.svg" alt="Comments">3</a>
+                <a href=""><img src="/images/retweet.svg" alt="Retweet">3</a>
+                <a href=""><img src="/images/like.svg" alt="Like">3</a>
+              </div>
+            </div>
+          </li>
+          <li>
+            <img src="/images/avatar.png" alt="Avatar">
+            <div class="info">
+              <strong>Benoit Vrins <span>@Exibit</span></strong>
+              <p>Conteúdo do tweetConteúdoConteúdo do tweetConteúdo do tweetConteúdo do tweetConteúdo do tweet do Conteúdo do tweetConteúdo do tweetvstweetConteúdo do tweetConteúdo do tweetConteúdo do tweetConteúdo do tweet</p>
+              <div class="actions">
+                <a href=""><img src="/images/comments.svg" alt="Comments">3</a>
+                <a href=""><img src="/images/retweet.svg" alt="Retweet">3</a>
+                <a href=""><img src="/images/like.svg" alt="Like">3</a>
+              </div>
+            </div>
+          </li>
+          <li>
+            <img src="/images/avatar.png" alt="Avatar">
+            <div class="info">
+              <strong>Benoit Vrins <span>@Exibit</span></strong>
+              <p>Conteúdo do tweetConteúdoConteúdo do tweetConteúdo do tweetConteúdo do tweetConteúdo do tweet do Conteúdo do tweetConteúdo do tweetvstweetConteúdo do tweetConteúdo do tweetConteúdo do tweetConteúdo do tweet</p>
+              <div class="actions">
+                <a href=""><img src="/images/comments.svg" alt="Comments">3</a>
+                <a href=""><img src="/images/retweet.svg" alt="Retweet">3</a>
+                <a href=""><img src="/images/like.svg" alt="Like">3</a>
+              </div>
+            </div>
+          </li>
+          <li>
+            <img src="/images/avatar.png" alt="Avatar">
+            <div class="info">
+              <strong>Benoit Vrins <span>@Exibit</span></strong>
+              <p>Conteúdo do tweetConteúdoConteúdo do tweetConteúdo do tweetConteúdo do tweetConteúdo do tweet do Conteúdo do tweetConteúdo do tweetvstweetConteúdo do tweetConteúdo do tweetConteúdo do tweetConteúdo do tweet</p>
+              <div class="actions">
+                <a href=""><img src="/images/comments.svg" alt="Comments">3</a>
+                <a href=""><img src="/images/retweet.svg" alt="Retweet">3</a>
+                <a href=""><img src="/images/like.svg" alt="Like">3</a>
+              </div>
+            </div>
+          </li>
+          <li>
+            <img src="/images/avatar.png" alt="Avatar">
+            <div class="info">
+              <strong>Benoit Vrins <span>@Exibit</span></strong>
+              <p>Conteúdo do tweetConteúdoConteúdo do tweetConteúdo do tweetConteúdo do tweetConteúdo do tweet do Conteúdo do tweetConteúdo do tweetvstweetConteúdo do tweetConteúdo do tweetConteúdo do tweetConteúdo do tweet</p>
+              <div class="actions">
+                <a href=""><img src="/images/comments.svg" alt="Comments">3</a>
+                <a href=""><img src="/images/retweet.svg" alt="Retweet">3</a>
+                <a href=""><img src="/images/like.svg" alt="Like">3</a>
+              </div>
+            </div>
+          </li>
+          <li>
+            <img src="/images/avatar.png" alt="Avatar">
+            <div class="info">
+              <strong>Benoit Vrins <span>@Exibit</span></strong>
+              <p>Conteúdo do tweetConteúdoConteúdo do tweetConteúdo do tweetConteúdo do tweetConteúdo do tweet do Conteúdo do tweetConteúdo do tweetvstweetConteúdo do tweetConteúdo do tweetConteúdo do tweetConteúdo do tweet</p>
+              <div class="actions">
+                <a href=""><img src="/images/comments.svg" alt="Comments">3</a>
+                <a href=""><img src="/images/retweet.svg" alt="Retweet">3</a>
+                <a href=""><img src="/images/like.svg" alt="Like">3</a>
+              </div>
+            </div>
+          </li>
+          <li>
+            <img src="/images/avatar.png" alt="Avatar">
+            <div class="info">
+              <strong>Benoit Vrins <span>@Exibit</span></strong>
+              <p>Conteúdo do tweetConteúdoConteúdo do tweetConteúdo do tweetConteúdo do tweetConteúdo do tweet do Conteúdo do tweetConteúdo do tweetvstweetConteúdo do tweetConteúdo do tweetConteúdo do tweetConteúdo do tweet</p>
+              <div class="actions">
+                <a href=""><img src="/images/comments.svg" alt="Comments">3</a>
+                <a href=""><img src="/images/retweet.svg" alt="Retweet">3</a>
+                <a href=""><img src="/images/like.svg" alt="Like">3</a>
+              </div>
+            </div>
+          </li>
+        </ul>
       </section>
 
       <aside class="widgets">
